miniextendr-macros/tests/ui/impl_method_self_by_value.stderr
error: method `consume` takes `self` by value (consuming), which is not fully supported.

       Methods that consume `self` cannot be called from R because R uses reference semantics via ExternalPtr - the R object would remain alive after the Rust value is consumed.

       Options:
       1. Use `&self` or `&mut self` instead of `self`
       2. If this is a finalizer (cleanup method), add `#[miniextendr(finalize)]`
       3. If this returns a new Self (builder pattern), add `#[miniextendr(constructor)]`
 --> tests/ui/impl_method_self_by_value.rs:9:5
  |
9 |     fn consume(self) -> i32 {
  |     ^^
